Changelog
=========

1.1 (unreleased)
----------------

* Update license to GPL version 2 only.
  [hannosch]

* Added experimental windmill browser integration tests.
  [smcmahon]

1.1b5 - 2010-06-12
------------------

* Update to jQuery Tools 1.2.3.
  [smcmahon]

* Recode to one "var" per function standard.
  [smcmahon]

* Don't show empty ajax form responses, even if "noform" is not set.
  [smcmahon]

1.1b4 - 2010-06-06
------------------

* The select technique used to filter ajax response in b1-b3 was not robust
  if the responseText was not well-formed (think ZMI forms). Fixed by emulating
  the technique used in jQuery's .load method.
  [smcmahon]

1.1b3 - 2010-06-03
------------------

* Switch back to "find", undoing 1.1b2 change. 'filter' does not find
  descendents, and will thus not work in most validation error situations.
  Also, cleaned up identifiers and comments that suggested that we were
  filtering rather than selecting.
  [smcmahon]

1.1b2 - 2010-06-03
------------------

* Fix regression in filtering introduced in 1.1b1.
  [davisagli]

1.1b1
-----

* Integrate jQuery form plugin http://malsup.com/jquery/form/ so that we
  can handle file uploads. Bump version # to reflect significant change.
  [davisagli, smcmahon]

1.0rc3
------

* Update to tools 1.2.2. (Trivial changes)
  [smcmahon]

* Set max-height on ajax overlays to 75% of the viewport's height; switch
  to fixed positioning on everything but IE6.
  [smcmahon]

* Updated to tools 1.2.1; removed jqt image resources (too bulky
  to justify as part of main distribution).
  [smcmahon]

1.0rc2
------

* Change query string variable for ajax loads from "rand" to "ajax_load"
  to clarify its purpose.
  
* Added cssclass option for prepOverlay.

1.0rc1
------

* Add responseText to parameters passed in the redirect callback; this
  enables smarter redirects in cases where pages may have disappeared.
  [smcmahon]

* Add 'link-overlay' class to overlay triggers.
  [davisagli]
