@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+
+ <stylesheet title=""
+    id="++resource++plone.app.jquerytools.overlays.css"
+    media="screen" rel="stylesheet" rendering="import"
+    cacheable="False" compression="safe" cookable="True"
+    enabled="1" expression=""/>
+
+</object>
